tests/sksl/errors/ReservedNameDvec3.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'dvec3'
1 error
